Added Harmony collection tests to the suite of tests. This covers both the original and modified collections.