@@ -23,18 +23,16 @@ package harmony.collections;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
-import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 
-public class HashMapTest extends junit.framework.TestCase {
-    class MockMap extends AbstractMap {
+public class HarmonyHashMapTest extends junit.framework.TestCase {
+    class MockMap extends HarmonyAbstractMap {
         public Set entrySet() {
             return null;
         }
@@ -43,7 +41,7 @@ public class HashMapTest extends junit.framework.TestCase {
         }
     }
     
-    private static class MockMapNull extends AbstractMap {
+    private static class MockMapNull extends HarmonyAbstractMap {
         public Set entrySet() {
             return null;
         }
@@ -91,7 +89,7 @@ public class HashMapTest extends junit.framework.TestCase {
     }
 
 
-	HashMap hm;
+	HarmonyHashMap hm;
 
 	final static int hmSize = 1000;
 
@@ -108,88 +106,88 @@ public class HashMapTest extends junit.framework.TestCase {
 	}
 
 	/**
-	 * @tests java.util.HashMap#HashMap()
+	 * @tests java.util.HarmonyHashMap#HarmonyHashMap()
 	 */
 	public void test_Constructor() {
-		// Test for method java.util.HashMap()
-		new Support_MapTest2(new HashMap()).runTest();
+		// Test for method java.util.HarmonyHashMap()
+		new Support_MapTest2(new HarmonyHashMap()).runTest();
 
-		HashMap hm2 = new HashMap();
-		assertEquals("Created incorrect HashMap", 0, hm2.size());
+		HarmonyHashMap hm2 = new HarmonyHashMap();
+		assertEquals("Created incorrect HarmonyHashMap", 0, hm2.size());
 	}
 
 	/**
-	 * @tests java.util.HashMap#HashMap(int)
+	 * @tests java.util.HarmonyHashMap#HarmonyHashMap(int)
 	 */
 	public void test_ConstructorI() {
-		// Test for method java.util.HashMap(int)
-		HashMap hm2 = new HashMap(5);
-		assertEquals("Created incorrect HashMap", 0, hm2.size());
+		// Test for method java.util.HarmonyHashMap(int)
+		HarmonyHashMap hm2 = new HarmonyHashMap(5);
+		assertEquals("Created incorrect HarmonyHashMap", 0, hm2.size());
 		try {
-			new HashMap(-1);
+			new HarmonyHashMap(-1);
 		} catch (IllegalArgumentException e) {
 			return;
 		}
 		fail(
 				"Failed to throw IllegalArgumentException for initial capacity < 0");
 
-		HashMap empty = new HashMap(0);
-		assertNull("Empty hashmap access", empty.get("nothing"));
+		HarmonyHashMap<String, String> empty = new HarmonyHashMap<>(0);
+		assertNull("Empty HarmonyHashMap access", empty.get("nothing"));
 		empty.put("something", "here");
 		assertTrue("cannot get element", empty.get("something") == "here");
 	}
 
 	/**
-	 * @tests java.util.HashMap#HashMap(int, float)
+	 * @tests java.util.HarmonyHashMap#HarmonyHashMap(int, float)
 	 */
 	public void test_ConstructorIF() {
-		// Test for method java.util.HashMap(int, float)
-		HashMap hm2 = new HashMap(5, (float) 0.5);
-		assertEquals("Created incorrect HashMap", 0, hm2.size());
+		// Test for method java.util.HarmonyHashMap(int, float)
+		HarmonyHashMap hm2 = new HarmonyHashMap(5, (float) 0.5);
+		assertEquals("Created incorrect HarmonyHashMap", 0, hm2.size());
 		try {
-			new HashMap(0, 0);
+			new HarmonyHashMap(0, 0);
 		} catch (IllegalArgumentException e) {
 			return;
 		}
 		fail(
 				"Failed to throw IllegalArgumentException for initial load factor <= 0");
 
-		HashMap empty = new HashMap(0, 0.75f);
+		HarmonyHashMap<String, String> empty = new HarmonyHashMap<String, String>(0, 0.75f);
 		assertNull("Empty hashtable access", empty.get("nothing"));
 		empty.put("something", "here");
 		assertTrue("cannot get element", empty.get("something") == "here");
 	}
 
 	/**
-	 * @tests java.util.HashMap#HashMap(java.util.Map)
+	 * @tests java.util.HarmonyHashMap#HarmonyHashMap(java.util.Map)
 	 */
 	public void test_ConstructorLjava_util_Map() {
-		// Test for method java.util.HashMap(java.util.Map)
+		// Test for method java.util.HarmonyHashMap(java.util.Map)
 		Map myMap = new TreeMap();
 		for (int counter = 0; counter < hmSize; counter++)
 			myMap.put(objArray2[counter], objArray[counter]);
-		HashMap hm2 = new HashMap(myMap);
+		HarmonyHashMap hm2 = new HarmonyHashMap(myMap);
 		for (int counter = 0; counter < hmSize; counter++)
-			assertTrue("Failed to construct correct HashMap", hm
+			assertTrue("Failed to construct correct HarmonyHashMap", hm
 					.get(objArray2[counter]) == hm2.get(objArray2[counter]));
         
         try {
             Map mockMap = new MockMap();
-            hm = new HashMap(mockMap);
+            hm = new HarmonyHashMap(mockMap);
             fail("Should throw NullPointerException");
         } catch (NullPointerException e) {
             //empty
         }
         
-        HashMap map = new HashMap();
+        HarmonyHashMap<String, String> map = new HarmonyHashMap<String, String>();
         map.put("a", "a");
-        SubMap map2 = new SubMap(map); 
+        SubMap<String, String> map2 = new SubMap<String, String>(map);
         assertTrue(map2.containsKey("a"));
         assertTrue(map2.containsValue("a"));
 	}
 
 	/**
-	 * @tests java.util.HashMap#clear()
+	 * @tests java.util.HarmonyHashMap#clear()
 	 */
 	public void test_clear() {
 		hm.clear();
@@ -199,7 +197,7 @@ public class HashMapTest extends junit.framework.TestCase {
 					hm.get(objArray2[i]));
         
 		// Check clear on a large loaded map of Integer keys
-		HashMap<Integer, String> map = new HashMap<Integer, String>();
+		HarmonyHashMap<Integer, String> map = new HarmonyHashMap<Integer, String>();
         for (int i = -32767; i < 32768; i++) {
             map.put(i, "foobar");
         }
@@ -211,26 +209,26 @@ public class HashMapTest extends junit.framework.TestCase {
 	}
 
 	/**
-	 * @tests java.util.HashMap#clone()
+	 * @tests java.util.HarmonyHashMap#clone()
 	 */
 	public void test_clone() {
-		// Test for method java.lang.Object java.util.HashMap.clone()
-		HashMap hm2 = (HashMap) hm.clone();
-		assertTrue("Clone answered equivalent HashMap", hm2 != hm);
+		// Test for method java.lang.Object java.util.HarmonyHashMap.clone()
+		HarmonyHashMap hm2 = (HarmonyHashMap) hm.clone();
+		assertTrue("Clone answered equivalent HarmonyHashMap", hm2 != hm);
 		for (int counter = 0; counter < hmSize; counter++)
-			assertTrue("Clone answered unequal HashMap", hm
+			assertTrue("Clone answered unequal HarmonyHashMap", hm
 					.get(objArray2[counter]) == hm2.get(objArray2[counter]));
 
-		HashMap map = new HashMap();
+		HarmonyHashMap<String, String> map = new HarmonyHashMap<String, String>();
 		map.put("key", "value");
 		// get the keySet() and values() on the original Map
-		Set keys = map.keySet();
-		Collection values = map.values();
+		Set<String> keys = map.keySet();
+		Collection<String> values = map.values();
 		assertEquals("values() does not work", 
 				"value", values.iterator().next());
 		assertEquals("keySet() does not work", 
 				"key", keys.iterator().next());
-		AbstractMap map2 = (AbstractMap) map.clone();
+		HarmonyAbstractMap map2 = (HarmonyAbstractMap) map.clone();
 		map2.put("key", "value2");
 		Collection values2 = map2.values();
 		assertTrue("values() is identical", values2 != values);
@@ -245,51 +243,51 @@ public class HashMapTest extends junit.framework.TestCase {
 				"key2", key2.iterator().next());
         
         // regresion test for HARMONY-4603
-        HashMap hashmap = new HashMap();
+        HarmonyHashMap<Integer, MockClonable> HarmonyHashMap = new HarmonyHashMap<>();
         MockClonable mock = new MockClonable(1);
-        hashmap.put(1, mock);
-        assertEquals(1, ((MockClonable) hashmap.get(1)).i);
-        HashMap hm3 = (HashMap)hashmap.clone();
+        HarmonyHashMap.put(1, mock);
+        assertEquals(1, (HarmonyHashMap.get(1)).i);
+        HarmonyHashMap hm3 = (HarmonyHashMap)HarmonyHashMap.clone();
         assertEquals(1, ((MockClonable) hm3.get(1)).i);
         mock.i = 0;
-        assertEquals(0, ((MockClonable) hashmap.get(1)).i);
+        assertEquals(0, (HarmonyHashMap.get(1)).i);
         assertEquals(0, ((MockClonable) hm3.get(1)).i);
 	}
 
 	/**
-	 * @tests java.util.HashMap#containsKey(java.lang.Object)
+	 * @tests java.util.HarmonyHashMap#containsKey(java.lang.Object)
 	 */
 	public void test_containsKeyLjava_lang_Object() {
 		// Test for method boolean
-		// java.util.HashMap.containsKey(java.lang.Object)
+		// java.util.HarmonyHashMap.containsKey(java.lang.Object)
 		assertTrue("Returned false for valid key", hm.containsKey(new Integer(
 				876).toString()));
 		assertTrue("Returned true for invalid key", !hm.containsKey("KKDKDKD"));
 
-		HashMap m = new HashMap();
+		HarmonyHashMap m = new HarmonyHashMap();
 		m.put(null, "test");
 		assertTrue("Failed with null key", m.containsKey(null));
 		assertTrue("Failed with missing key matching null hash", !m
-				.containsKey(new Integer(0)));
+				.containsKey(0));
 	}
 
 	/**
-	 * @tests java.util.HashMap#containsValue(java.lang.Object)
+	 * @tests java.util.HarmonyHashMap#containsValue(java.lang.Object)
 	 */
 	public void test_containsValueLjava_lang_Object() {
 		// Test for method boolean
-		// java.util.HashMap.containsValue(java.lang.Object)
+		// java.util.HarmonyHashMap.containsValue(java.lang.Object)
 		assertTrue("Returned false for valid value", hm
-				.containsValue(new Integer(875)));
+				.containsValue(875));
 		assertTrue("Returned true for invalid valie", !hm
-				.containsValue(new Integer(-9)));
+				.containsValue(-9));
 	}
 
 	/**
-	 * @tests java.util.HashMap#entrySet()
+	 * @tests java.util.HarmonyHashMap#entrySet()
 	 */
 	public void test_entrySet() {
-		// Test for method java.util.Set java.util.HashMap.entrySet()
+		// Test for method java.util.Set java.util.HarmonyHashMap.entrySet()
 		Set s = hm.entrySet();
 		Iterator i = s.iterator();
 		assertTrue("Returned set of incorrect size", hm.size() == s.size());
@@ -306,26 +304,26 @@ public class HashMapTest extends junit.framework.TestCase {
 	}
 
 	/**
-	 * @tests java.util.HashMap#get(java.lang.Object)
+	 * @tests java.util.HarmonyHashMap#get(java.lang.Object)
 	 */
 	public void test_getLjava_lang_Object() {
 		// Test for method java.lang.Object
-		// java.util.HashMap.get(java.lang.Object)
+		// java.util.HarmonyHashMap.get(java.lang.Object)
 		assertNull("Get returned non-null for non existent key",
 				hm.get("T"));
 		hm.put("T", "HELLO");
 		assertEquals("Get returned incorrect value for existing key", "HELLO", hm.get("T")
 				);
 
-		HashMap m = new HashMap();
+		HarmonyHashMap m = new HarmonyHashMap();
 		m.put(null, "test");
 		assertEquals("Failed with null key", "test", m.get(null));
 		assertNull("Failed with missing key matching null hash", m
-				.get(new Integer(0)));
+				.get(0));
 		
 		// Regression for HARMONY-206
 		ReusableKey k = new ReusableKey();
-		HashMap map = new HashMap();
+		HarmonyHashMap<ReusableKey, String> map = new HarmonyHashMap<>();
 		k.setKey(1);
 		map.put(k, "value1");
 
@@ -368,7 +366,7 @@ public class HashMapTest extends junit.framework.TestCase {
         assertTrue("Failed to find proxy object as value", hm.containsValue(proxyValue));
         
         // Proxy key and value
-        HashMap map = new HashMap();
+        HarmonyHashMap<MockInterface, MockInterface> map = new HarmonyHashMap<>();
         map.put(proxyKey, proxyValue);
         assertTrue("Failed to find proxy key", map.containsKey(proxyKey));
         assertEquals(1, map.size());
@@ -378,42 +376,41 @@ public class HashMapTest extends junit.framework.TestCase {
 	}
 
 	/**
-	 * @tests java.util.HashMap#isEmpty()
+	 * @tests java.util.HarmonyHashMap#isEmpty()
 	 */
 	public void test_isEmpty() {
-		// Test for method boolean java.util.HashMap.isEmpty()
-		assertTrue("Returned false for new map", new HashMap().isEmpty());
+		// Test for method boolean java.util.HarmonyHashMap.isEmpty()
+		assertTrue("Returned false for new map", new HarmonyHashMap().isEmpty());
 		assertTrue("Returned true for non-empty", !hm.isEmpty());
 	}
 
 	/**
-	 * @tests java.util.HashMap#keySet()
+	 * @tests java.util.HarmonyHashMap#keySet()
 	 */
 	public void test_keySet() {
-		// Test for method java.util.Set java.util.HashMap.keySet()
+		// Test for method java.util.Set java.util.HarmonyHashMap.keySet()
 		Set s = hm.keySet();
 		assertTrue("Returned set of incorrect size()", s.size() == hm.size());
 		for (int i = 0; i < objArray.length; i++)
 			assertTrue("Returned set does not contain all keys", s
 					.contains(objArray[i].toString()));
 
-		HashMap m = new HashMap();
+		HarmonyHashMap<Object, String> m = new HarmonyHashMap<Object, String>();
 		m.put(null, "test");
 		assertTrue("Failed with null key", m.keySet().contains(null));
 		assertNull("Failed with null key", m.keySet().iterator().next());
 
-		Map map = new HashMap(101);
-		map.put(new Integer(1), "1");
-		map.put(new Integer(102), "102");
-		map.put(new Integer(203), "203");
-		Iterator it = map.keySet().iterator();
-		Integer remove1 = (Integer) it.next();
+		Map<Integer, String> map = new HarmonyHashMap<Integer, String>(101);
+		map.put(1, "1");
+		map.put(102, "102");
+		map.put(203, "203");
+		Iterator<Integer> it = map.keySet().iterator();
+		Integer remove1 = it.next();
 		it.hasNext();
 		it.remove();
-		Integer remove2 = (Integer) it.next();
+		Integer remove2 = it.next();
 		it.remove();
-		ArrayList list = new ArrayList(Arrays.asList(new Integer[] {
-				new Integer(1), new Integer(102), new Integer(203) }));
+		ArrayList<Integer> list = new ArrayList<>(Arrays.asList(1, 102, 203));
 		list.remove(remove1);
 		list.remove(remove2);
 		assertTrue("Wrong result", it.next().equals(list.get(0)));
@@ -421,16 +418,16 @@ public class HashMapTest extends junit.framework.TestCase {
 		assertTrue("Wrong contents", map.keySet().iterator().next().equals(
 				list.get(0)));
 
-		Map map2 = new HashMap(101);
-		map2.put(new Integer(1), "1");
-		map2.put(new Integer(4), "4");
-		Iterator it2 = map2.keySet().iterator();
-		Integer remove3 = (Integer) it2.next();
+		Map<Integer, String> map2 = new HarmonyHashMap<>(101);
+		map2.put(1, "1");
+		map2.put(4, "4");
+		Iterator<Integer> it2 = map2.keySet().iterator();
+		Integer remove3 = it2.next();
 		Integer next;
 		if (remove3.intValue() == 1)
-			next = new Integer(4);
+			next = 4;
 		else
-			next = new Integer(1);
+			next = 1;
 		it2.hasNext();
 		it2.remove();
 		assertTrue("Wrong result 2", it2.next().equals(next));
@@ -440,27 +437,32 @@ public class HashMapTest extends junit.framework.TestCase {
 	}
 
 	/**
-	 * @tests java.util.HashMap#put(java.lang.Object, java.lang.Object)
+	 * @tests java.util.HarmonyHashMap#put(java.lang.Object, java.lang.Object)
 	 */
 	public void test_putLjava_lang_ObjectLjava_lang_Object() {
         hm.put("KEY", "VALUE");
         assertEquals("Failed to install key/value pair", "VALUE", hm.get("KEY"));
 
-        HashMap<Object,Object> m = new HashMap<Object,Object>();
-        m.put(new Short((short) 0), "short");
+        HarmonyHashMap<Object,Object> m = new HarmonyHashMap<Object,Object>();
+        m.put((short) 0, "short");
         m.put(null, "test");
-        m.put(new Integer(0), "int");
+        m.put(0, "int");
         assertEquals("Failed adding to bucket containing null", "short", m
-                .get(new Short((short) 0)));
+                .get((short) 0));
         assertEquals("Failed adding to bucket containing null2", "int", m
-                .get(new Integer(0)));
+                .get(0));
         
         // Check my actual key instance is returned
-        HashMap<Integer, String> map = new HashMap<Integer, String>();
+        HarmonyHashMap<Integer, String> map = new HarmonyHashMap<Integer, String>();
         for (int i = -32767; i < 32768; i++) {
             map.put(i, "foobar");
         }
-        Integer myKey = new Integer(0);
+		// The new operator creates a new object whereas just writing Integer myKey = 0 or Integer.valueOf(0) creates
+		// the same object. Same object is great for memory use and performance but it is not what we are testing here:
+		// The test aims to make sure that even though we modify an existing pair, the original key remains unchanged and
+		// if it was replaced withg myKey, the assertFalse below will fail.
+		//noinspection deprecation
+		Integer myKey = new Integer(0);
         // Put a new value at the old key position
         map.put(myKey, "myValue");
         assertTrue(map.containsKey(myKey));
@@ -472,7 +474,7 @@ public class HashMapTest extends junit.framework.TestCase {
                 break;
             }
         }
-        assertFalse("Should not find new key instance in hashmap", found);
+        assertFalse("Should not find new key instance in HarmonyHashMap", found);
 
         // Add a new key instance and check it is returned
         assertNotNull(map.remove(myKey));
@@ -485,10 +487,10 @@ public class HashMapTest extends junit.framework.TestCase {
                 break;
             }
         }
-        assertTrue("Did not find new key instance in hashmap", found);
+        assertTrue("Did not find new key instance in HarmonyHashMap", found);
 
         // Ensure keys with identical hashcode are stored separately
-        HashMap<Object,Object> objmap = new HashMap<Object, Object>();
+        HarmonyHashMap<Object,Object> objmap = new HarmonyHashMap<Object, Object>();
         for (int i = 0; i < 32768; i++) {
             objmap.put(i, "foobar");
         }
@@ -510,36 +512,36 @@ public class HashMapTest extends junit.framework.TestCase {
         }
     }
 	/**
-	 * @tests java.util.HashMap#putAll(java.util.Map)
+	 * @tests java.util.HarmonyHashMap#putAll(java.util.Map)
 	 */
 	public void test_putAllLjava_util_Map() {
-		// Test for method void java.util.HashMap.putAll(java.util.Map)
-		HashMap hm2 = new HashMap();
+		// Test for method void java.util.HarmonyHashMap.putAll(java.util.Map)
+		HarmonyHashMap hm2 = new HarmonyHashMap();
 		hm2.putAll(hm);
 		for (int i = 0; i < 1000; i++)
 			assertTrue("Failed to clear all elements", hm2.get(
-					new Integer(i).toString()).equals((new Integer(i))));
+					new Integer(i).toString()).equals((i)));
         
         Map mockMap = new MockMap();
-        hm2 = new HashMap();
+        hm2 = new HarmonyHashMap();
         hm2.putAll(mockMap);
         assertEquals("Size should be 0", 0, hm2.size());
 	}
     
     /**
-     * @tests java.util.HashMap#putAll(java.util.Map)
+     * @tests java.util.HarmonyHashMap#putAll(java.util.Map)
      */
     public void test_putAllLjava_util_Map_Null() {
-        HashMap hashMap = new HashMap();
+        HarmonyHashMap HarmonyHashMap = new HarmonyHashMap();
         try {
-            hashMap.putAll(new MockMapNull());
+            HarmonyHashMap.putAll(new MockMapNull());
             fail("Should throw NullPointerException");
         } catch (NullPointerException e) {
             // expected.
         }
 
         try {
-            hashMap = new HashMap(new MockMapNull());
+            HarmonyHashMap = new HarmonyHashMap(new MockMapNull());
             fail("Should throw NullPointerException");
         } catch (NullPointerException e) {
             // expected.
@@ -547,25 +549,25 @@ public class HashMapTest extends junit.framework.TestCase {
     } 
 
 	/**
-	 * @tests java.util.HashMap#remove(java.lang.Object)
+	 * @tests java.util.HarmonyHashMap#remove(java.lang.Object)
 	 */
 	public void test_removeLjava_lang_Object() {
 		int size = hm.size();
-		Integer y = new Integer(9);
+		Integer y = 9;
 		Integer x = ((Integer) hm.remove(y.toString()));
-		assertTrue("Remove returned incorrect value", x.equals(new Integer(9)));
-		assertNull("Failed to remove given key", hm.get(new Integer(9)));
+		assertTrue("Remove returned incorrect value", x.equals(9));
+		assertNull("Failed to remove given key", hm.get(9));
 		assertTrue("Failed to decrement size", hm.size() == (size - 1));
 		assertNull("Remove of non-existent key returned non-null", hm
 				.remove("LCLCLC"));
 
-		HashMap m = new HashMap();
+		HarmonyHashMap m = new HarmonyHashMap();
 		m.put(null, "test");
 		assertNull("Failed with same hash as null",
-				m.remove(new Integer(0)));
+				m.remove(0));
 		assertEquals("Failed with null key", "test", m.remove(null));
 		
-		HashMap<Integer, Object> map = new HashMap<Integer, Object>();
+		HarmonyHashMap<Integer, Object> map = new HarmonyHashMap<Integer, Object>();
         for (int i = 0; i < 32768; i++) {
             map.put(i, "const");
         }
@@ -579,7 +581,7 @@ public class HashMapTest extends junit.framework.TestCase {
         }
 
         // Ensure keys with identical hashcode are removed properly
-        map = new HashMap<Integer, Object>();
+        map = new HarmonyHashMap<Integer, Object>();
         for (int i = -32767; i < 32768; i++) {
             map.put(i, "foobar");
         }
@@ -596,7 +598,7 @@ public class HashMapTest extends junit.framework.TestCase {
 	 */
     public void test_rehash() {
         // This map should rehash on adding the ninth element.
-        HashMap<MyKey, Integer> hm = new HashMap<MyKey, Integer>(10, 0.5f);
+        HarmonyHashMap<MyKey, Integer> hm = new HarmonyHashMap<MyKey, Integer>(10, 0.5f);
 
         // Ordered set of keys.
         MyKey[] keyOrder = new MyKey[9];
@@ -624,19 +626,19 @@ public class HashMapTest extends junit.framework.TestCase {
     }
 
 	/**
-	 * @tests java.util.HashMap#size()
+	 * @tests java.util.HarmonyHashMap#size()
 	 */
 	public void test_size() {
-		// Test for method int java.util.HashMap.size()
+		// Test for method int java.util.HarmonyHashMap.size()
 		assertTrue("Returned incorrect size",
 				hm.size() == (objArray.length + 2));
 	}
 
 	/**
-	 * @tests java.util.HashMap#values()
+	 * @tests java.util.HarmonyHashMap#values()
 	 */
 	public void test_values() {
-		// Test for method java.util.Collection java.util.HashMap.values()
+		// Test for method java.util.Collection java.util.HarmonyHashMap.values()
 		Collection c = hm.values();
 		assertTrue("Returned collection of incorrect size()", c.size() == hm
 				.size());
@@ -644,17 +646,17 @@ public class HashMapTest extends junit.framework.TestCase {
 			assertTrue("Returned collection does not contain all keys", c
 					.contains(objArray[i]));
 
-		HashMap myHashMap = new HashMap();
+		HarmonyHashMap myHarmonyHashMap = new HarmonyHashMap();
 		for (int i = 0; i < 100; i++)
-			myHashMap.put(objArray2[i], objArray[i]);
-		Collection values = myHashMap.values();
+			myHarmonyHashMap.put(objArray2[i], objArray[i]);
+		Collection values = myHarmonyHashMap.values();
 		new Support_UnmodifiableCollectionTest(
-				"Test Returned Collection From HashMap.values()", values)
+				"Test Returned Collection From HarmonyHashMap.values()", values)
 				.runTest();
-		values.remove(new Integer(0));
+		values.remove(0);
 		assertTrue(
 				"Removing from the values collection should remove from the original map",
-				!myHashMap.containsValue(new Integer(0)));
+				!myHarmonyHashMap.containsValue(0));
 
 	}
     
@@ -663,7 +665,7 @@ public class HashMapTest extends junit.framework.TestCase {
      */
     public void test_toString() {
 
-        HashMap m = new HashMap();
+        HarmonyHashMap m = new HarmonyHashMap();
         m.put(m, m);
         String result = m.toString();
         assertTrue("should contain self ref", result.indexOf("(this") > -1);
@@ -693,14 +695,14 @@ public class HashMapTest extends junit.framework.TestCase {
     
 	public void test_Map_Entry_hashCode() {
         //Related to HARMONY-403
-	    HashMap<Integer, Integer> map = new HashMap<Integer, Integer>(10);
-	    Integer key = new Integer(1);
-	    Integer val = new Integer(2);
+	    HarmonyHashMap<Integer, Integer> map = new HarmonyHashMap<Integer, Integer>(10);
+	    Integer key = 1;
+	    Integer val = 2;
 	    map.put(key, val);
 	    int expected = key.hashCode() ^ val.hashCode();
 	    assertEquals(expected, map.hashCode());
-	    key = new Integer(4);
-	    val = new Integer(8);
+	    key = 4;
+	    val = 8;
 	    map.put(key, val);
 	    expected += key.hashCode() ^ val.hashCode();
 	    assertEquals(expected, map.hashCode());
@@ -723,11 +725,11 @@ public class HashMapTest extends junit.framework.TestCase {
      * Regression test for HY-4750
      */
     public void test_EntrySet() {
-        HashMap map = new HashMap();
-        map.put(new Integer(1), "ONE");
+        HarmonyHashMap<Object, String> map = new HarmonyHashMap<Object, String>();
+        map.put(1, "ONE");
 
-        Set entrySet = map.entrySet();
-        Iterator e = entrySet.iterator();
+        Set<Map.Entry<Object, String>> entrySet = map.entrySet();
+        Iterator<Map.Entry<Object, String>> e = entrySet.iterator();
         Object real = e.next();
         Map.Entry copyEntry = new MockEntry();
         assertEquals(real, copyEntry);
@@ -742,7 +744,7 @@ public class HashMapTest extends junit.framework.TestCase {
     private static class MockEntry implements Map.Entry {
 
         public Object getKey() {
-            return new Integer(1);
+            return 1;
         }
 
         public Object getValue() {
@@ -759,7 +761,7 @@ public class HashMapTest extends junit.framework.TestCase {
 	 * is called before a test is executed.
 	 */
 	protected void setUp() {
-		hm = new HashMap();
+		hm = new HarmonyHashMap();
 		for (int i = 0; i < objArray.length; i++)
 			hm.put(objArray2[i], objArray[i]);
 		hm.put("test", null);
@@ -767,7 +769,7 @@ public class HashMapTest extends junit.framework.TestCase {
 	}
 
 
-    class SubMap<K, V> extends HashMap<K, V> {
+    class SubMap<K, V> extends HarmonyHashMap<K, V> {
         public SubMap(Map<? extends K, ? extends V> m) {
             super(m);
         }
@@ -781,7 +783,7 @@ public class HashMapTest extends junit.framework.TestCase {
      * @tests serialization/deserialization.
      */
     public void testSerializationSelf() throws Exception {
-        HashMap<String, String> hm = new HashMap<String, String>();
+        HarmonyHashMap<String, String> hm = new HarmonyHashMap<String, String>();
         hm.put("key", "value");
 
         SerializationTest.verifySelf(hm);        
@@ -795,7 +797,7 @@ public class HashMapTest extends junit.framework.TestCase {
      * @tests serialization/deserialization compatibility with RI.
      */
     public void testSerializationCompatibility() throws Exception {
-        HashMap<String, String> hm = new HashMap<String, String>();
+        HarmonyHashMap<String, String> hm = new HarmonyHashMap<String, String>();
         hm.put("key", "value");
 
         SerializationTest.verifyGolden(this, hm);
