@@ -15,16 +15,11 @@
  *  limitations under the License.
  */
 
-// The origin of this file is Apache Harmony SVN repository,
-// location: classlib/modules/luni/src/main/java/java/util
-// checked out Dec 3, 2022.
 package harmony.collections;
-
 
 import java.io.Serializable;
 import java.text.CollationKey;
 import java.text.Collator;
-import java.util.AbstractMap;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -32,11 +27,12 @@ import java.util.Iterator;
 import java.util.Map;
 import java.util.Set;
 import java.util.SortedMap;
-import java.util.TreeMap;
 
-public class TreeMapTest extends junit.framework.TestCase {
+import static org.junit.Assert.assertNotEquals;
 
-    public static class ReversedComparator implements Comparator {
+public class HarmonyTreeMapTest extends junit.framework.TestCase {
+
+    public static class ReversedComparator<T> implements Comparator<T> {
         public int compare(Object o1, Object o2) {
             return -(((Comparable) o1).compareTo(o2));
         }
@@ -80,206 +76,196 @@ public class TreeMapTest extends junit.framework.TestCase {
         }
     }
 
-    TreeMap tm;
+    HarmonyTreeMap<Object, Object> tm;
 
     Object[] objArray = new Object[1000];
 
     /**
-     * Tests java.util.TreeMap#TreeMap()
+     * @tests java.util.HarmonyTreeMap#HarmonyTreeMap()
      */
     public void test_Constructor() {
-        // Test for method java.util.TreeMap()
-        new Support_MapTest2(new TreeMap()).runTest();
+        // Test for method java.util.HarmonyTreeMap()
+        new Support_MapTest2(new HarmonyTreeMap()).runTest();
 
-        assertTrue("New treeMap non-empty", new TreeMap().isEmpty());
+        assertTrue("New HarmonyTreeMap non-empty", new HarmonyTreeMap().isEmpty());
     }
 
     /**
-     * Tests java.util.TreeMap#TreeMap(java.util.Comparator)
+     * @tests java.util.HarmonyTreeMap#HarmonyTreeMap(java.util.Comparator)
      */
     public void test_ConstructorLjava_util_Comparator() {
-        // Test for method java.util.TreeMap(java.util.Comparator)
-        Comparator comp = new ReversedComparator();
-        TreeMap reversedTreeMap = new TreeMap(comp);
-        assertTrue("TreeMap answered incorrect comparator", reversedTreeMap
-                .comparator() == comp);
-        reversedTreeMap.put(new Integer(1).toString(), new Integer(1));
-        reversedTreeMap.put(new Integer(2).toString(), new Integer(2));
-        assertTrue("TreeMap does not use comparator (firstKey was incorrect)",
-                reversedTreeMap.firstKey().equals(new Integer(2).toString()));
-        assertTrue("TreeMap does not use comparator (lastKey was incorrect)",
-                reversedTreeMap.lastKey().equals(new Integer(1).toString()));
+        // Test for method java.util.HarmonyTreeMap(java.util.Comparator)
+        Comparator<String> comp = new ReversedComparator<>();
+        HarmonyTreeMap<String, Integer> reversedHarmonyTreeMap = new HarmonyTreeMap<>(comp);
+        assertSame("HarmonyTreeMap answered incorrect comparator", reversedHarmonyTreeMap
+                .comparator(), comp);
+        reversedHarmonyTreeMap.put(Integer.toString(1), 1);
+        reversedHarmonyTreeMap.put(Integer.toString(2), 2);
+        assertEquals("HarmonyTreeMap does not use comparator (firstKey was incorrect)", reversedHarmonyTreeMap.firstKey(), Integer.toString(2));
+        assertEquals("HarmonyTreeMap does not use comparator (lastKey was incorrect)", reversedHarmonyTreeMap.lastKey(), Integer.toString(1));
 
     }
 
     /**
-     * Tests java.util.TreeMap#TreeMap(java.util.Map)
+     * @tests java.util.HarmonyTreeMap#HarmonyTreeMap(java.util.Map)
      */
     public void test_ConstructorLjava_util_Map() {
-        // Test for method java.util.TreeMap(java.util.Map)
-        TreeMap myTreeMap = new TreeMap(new HashMap(tm));
-        assertTrue("Map is incorrect size", myTreeMap.size() == objArray.length);
+        // Test for method java.util.HarmonyTreeMap(java.util.Map)
+        HarmonyTreeMap<Object, Object> myHarmonyTreeMap = new HarmonyTreeMap<>(new HashMap<>(tm));
+        assertEquals("Map is incorrect size", myHarmonyTreeMap.size(), objArray.length);
         for (Object element : objArray) {
-            assertTrue("Map has incorrect mappings", myTreeMap.get(
-                    element.toString()).equals(element));
+            assertEquals("Map has incorrect mappings", myHarmonyTreeMap.get(
+                    element.toString()), element);
         }
     }
 
     /**
-     * Tests java.util.TreeMap#TreeMap(java.util.SortedMap)
+     * @tests java.util.HarmonyTreeMap#HarmonyTreeMap(java.util.SortedMap)
      */
     public void test_ConstructorLjava_util_SortedMap() {
-        // Test for method java.util.TreeMap(java.util.SortedMap)
-        Comparator comp = new ReversedComparator();
-        TreeMap reversedTreeMap = new TreeMap(comp);
-        reversedTreeMap.put(new Integer(1).toString(), new Integer(1));
-        reversedTreeMap.put(new Integer(2).toString(), new Integer(2));
-        TreeMap anotherTreeMap = new TreeMap(reversedTreeMap);
-        assertTrue("New tree map does not answer correct comparator",
-                anotherTreeMap.comparator() == comp);
-        assertTrue("TreeMap does not use comparator (firstKey was incorrect)",
-                anotherTreeMap.firstKey().equals(new Integer(2).toString()));
-        assertTrue("TreeMap does not use comparator (lastKey was incorrect)",
-                anotherTreeMap.lastKey().equals(new Integer(1).toString()));
+        // Test for method java.util.HarmonyTreeMap(java.util.SortedMap)
+        Comparator<String> comp = new ReversedComparator<>();
+        HarmonyTreeMap<String, Integer> reversedHarmonyTreeMap = new HarmonyTreeMap<>(comp);
+        reversedHarmonyTreeMap.put(Integer.toString(1), 1);
+        reversedHarmonyTreeMap.put(Integer.toString(2), 2);
+        HarmonyTreeMap<String, Integer> anotherHarmonyTreeMap = new HarmonyTreeMap<>(reversedHarmonyTreeMap);
+        assertSame("New tree map does not answer correct comparator", anotherHarmonyTreeMap.comparator(), comp);
+        assertEquals("HarmonyTreeMap does not use comparator (firstKey was incorrect)", anotherHarmonyTreeMap.firstKey(), Integer.toString(2));
+        assertEquals("HarmonyTreeMap does not use comparator (lastKey was incorrect)", anotherHarmonyTreeMap.lastKey(), Integer.toString(1));
 
     }
 
     /**
-     * Tests java.util.TreeMap#clear()
+     * @tests java.util.HarmonyTreeMap#clear()
      */
     public void test_clear() {
-        // Test for method void java.util.TreeMap.clear()
+        // Test for method void java.util.HarmonyTreeMap.clear()
         tm.clear();
         assertEquals("Cleared map returned non-zero size", 0, tm.size());
     }
 
     /**
-     * Tests java.util.TreeMap#clone()
+     * @tests java.util.HarmonyTreeMap#clone()
      */
     public void test_clone() {
-        // Test for method java.lang.Object java.util.TreeMap.clone()
-        TreeMap clonedMap = (TreeMap) tm.clone();
-        assertTrue("Cloned map does not equal the original map", clonedMap
-                .equals(tm));
-        assertTrue("Cloned map is the same reference as the original map",
-                clonedMap != tm);
+        // Test for method java.lang.Object java.util.HarmonyTreeMap.clone()
+        HarmonyTreeMap clonedMap = (HarmonyTreeMap) tm.clone();
+        assertEquals("Cloned map does not equal the original map", clonedMap, tm);
+        assertNotSame("Cloned map is the same reference as the original map", clonedMap, tm);
         for (Object element : objArray) {
-            assertTrue("Cloned map contains incorrect elements", clonedMap
-                    .get(element.toString()) == tm.get(element.toString()));
+            assertSame("Cloned map contains incorrect elements", clonedMap
+                    .get(element.toString()), tm.get(element.toString()));
         }
 
-        TreeMap map = new TreeMap();
+        HarmonyTreeMap<String, String> map = new HarmonyTreeMap<>();
         map.put("key", "value");
         // get the keySet() and values() on the original Map
-        Set keys = map.keySet();
-        Collection values = map.values();
+        Set<String> keys = map.keySet();
+        Collection<String> values = map.values();
         assertEquals("values() does not work", "value", values.iterator()
                 .next());
         assertEquals("keySet() does not work", "key", keys.iterator().next());
-        AbstractMap map2 = (AbstractMap) map.clone();
+        HarmonyAbstractMap map2 = (HarmonyAbstractMap) map.clone();
         map2.put("key", "value2");
         Collection values2 = map2.values();
-        assertTrue("values() is identical", values2 != values);
+        assertNotSame("values() is identical", values2, values);
         // values() and keySet() on the cloned() map should be different
         assertEquals("values() was not cloned", "value2", values2.iterator()
                 .next());
         map2.clear();
         map2.put("key2", "value3");
         Set key2 = map2.keySet();
-        assertTrue("keySet() is identical", key2 != keys);
+        assertNotSame("keySet() is identical", key2, keys);
         assertEquals("keySet() was not cloned", "key2", key2.iterator().next());
     }
 
     /**
-     * Tests java.util.TreeMap#comparator()
+     * @tests java.util.HarmonyTreeMap#comparator()
      */
     public void test_comparator() {
-        // Test for method java.util.Comparator java.util.TreeMap.comparator()\
-        Comparator comp = new ReversedComparator();
-        TreeMap reversedTreeMap = new TreeMap(comp);
-        assertTrue("TreeMap answered incorrect comparator", reversedTreeMap
-                .comparator() == comp);
-        reversedTreeMap.put(new Integer(1).toString(), new Integer(1));
-        reversedTreeMap.put(new Integer(2).toString(), new Integer(2));
-        assertTrue("TreeMap does not use comparator (firstKey was incorrect)",
-                reversedTreeMap.firstKey().equals(new Integer(2).toString()));
-        assertTrue("TreeMap does not use comparator (lastKey was incorrect)",
-                reversedTreeMap.lastKey().equals(new Integer(1).toString()));
+        // Test for method java.util.Comparator java.util.HarmonyTreeMap.comparator()\
+        Comparator<String> comp = new ReversedComparator<>();
+        HarmonyTreeMap<String, Integer> reversedHarmonyTreeMap = new HarmonyTreeMap<>(comp);
+        assertSame("HarmonyTreeMap answered incorrect comparator", reversedHarmonyTreeMap
+                .comparator(), comp);
+        reversedHarmonyTreeMap.put(Integer.toString(1), 1);
+        reversedHarmonyTreeMap.put(Integer.toString(2), 2);
+        assertEquals("HarmonyTreeMap does not use comparator (firstKey was incorrect)", reversedHarmonyTreeMap.firstKey(), Integer.toString(2));
+        assertEquals("HarmonyTreeMap does not use comparator (lastKey was incorrect)", reversedHarmonyTreeMap.lastKey(), Integer.toString(1));
     }
 
     /**
-     * Tests java.util.TreeMap#containsKey(java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#containsKey(java.lang.Object)
      */
     public void test_containsKeyLjava_lang_Object() {
         // Test for method boolean
-        // java.util.TreeMap.containsKey(java.lang.Object)
+        // java.util.HarmonyTreeMap.containsKey(java.lang.Object)
         assertTrue("Returned false for valid key", tm.containsKey("95"));
-        assertTrue("Returned true for invalid key", !tm.containsKey("XXXXX"));
+        assertFalse("Returned true for invalid key", tm.containsKey("XXXXX"));
     }
 
     /**
-     * Tests java.util.TreeMap#containsValue(java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#containsValue(java.lang.Object)
      */
     public void test_containsValueLjava_lang_Object() {
         // Test for method boolean
-        // java.util.TreeMap.containsValue(java.lang.Object)
+        // java.util.HarmonyTreeMap.containsValue(java.lang.Object)
         assertTrue("Returned false for valid value", tm
                 .containsValue(objArray[986]));
-        assertTrue("Returned true for invalid value", !tm
+        assertFalse("Returned true for invalid value", tm
                 .containsValue(new Object()));
     }
 
     /**
-     * Tests java.util.TreeMap#entrySet()
+     * @tests java.util.HarmonyTreeMap#entrySet()
      */
     public void test_entrySet() {
-        // Test for method java.util.Set java.util.TreeMap.entrySet()
-        Set anEntrySet = tm.entrySet();
-        Iterator entrySetIterator = anEntrySet.iterator();
-        assertTrue("EntrySet is incorrect size",
-                anEntrySet.size() == objArray.length);
-        Map.Entry entry;
+        // Test for method java.util.Set java.util.HarmonyTreeMap.entrySet()
+        Set<Map.Entry<Object, Object>> anEntrySet = tm.entrySet();
+        Iterator<Map.Entry<Object, Object>> entrySetIterator = anEntrySet.iterator();
+        assertEquals("EntrySet is incorrect size", anEntrySet.size(), objArray.length);
+        Map.Entry<Object, Object> entry;
         while (entrySetIterator.hasNext()) {
-            entry = (Map.Entry) entrySetIterator.next();
-            assertTrue("EntrySet does not contain correct mappings", tm
-                    .get(entry.getKey()) == entry.getValue());
+            entry = entrySetIterator.next();
+            assertSame("EntrySet does not contain correct mappings", tm
+                    .get(entry.getKey()), entry.getValue());
         }
     }
 
     /**
-     * Tests java.util.TreeMap#firstKey()
+     * @tests java.util.HarmonyTreeMap#firstKey()
      */
     public void test_firstKey() {
-        // Test for method java.lang.Object java.util.TreeMap.firstKey()
+        // Test for method java.lang.Object java.util.HarmonyTreeMap.firstKey()
         assertEquals("Returned incorrect first key", "0", tm.firstKey());
     }
 
     /**
-     * Tests java.util.TreeMap#get(java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#get(java.lang.Object)
      */
     public void test_getLjava_lang_Object() {
         // Test for method java.lang.Object
-        // java.util.TreeMap.get(java.lang.Object)
+        // java.util.HarmonyTreeMap.get(java.lang.Object)
         Object o = new Object();
         tm.put("Hello", o);
-        assertTrue("Failed to get mapping", tm.get("Hello") == o);
+        assertSame("Failed to get mapping", tm.get("Hello"), o);
 
     }
 
     /**
-     * Tests java.util.TreeMap#headMap(java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#headMap(java.lang.Object)
      */
     public void test_headMapLjava_lang_Object() {
         // Test for method java.util.SortedMap
-        // java.util.TreeMap.headMap(java.lang.Object)
-        Map head = tm.headMap("100");
+        // java.util.HarmonyTreeMap.headMap(java.lang.Object)
+        Map<Object, Object> head = tm.headMap("100");
         assertEquals("Returned map of incorrect size", 3, head.size());
         assertTrue("Returned incorrect elements", head.containsKey("0")
-                && head.containsValue(new Integer("1"))
+                && head.containsValue(Integer.valueOf("1"))
                 && head.containsKey("10"));
 
         // Regression for Harmony-1026
-        TreeMap<Integer, Double> map = new TreeMap<Integer, Double>(
+        HarmonyTreeMap<Integer, Double> map = new HarmonyTreeMap<Integer, Double>(
                 new MockComparator());
         map.put(1, 2.1);
         map.put(2, 3.1);
@@ -323,16 +309,16 @@ public class TreeMapTest extends junit.framework.TestCase {
             }
         };
 
-        TreeMap<String, String> treemap = new TreeMap<>(c);
-        assertEquals(0, treemap.headMap(null).size());
+        HarmonyTreeMap<String, String> HarmonyTreeMap = new HarmonyTreeMap<>(c);
+        assertEquals(0, HarmonyTreeMap.headMap(null).size());
         
-        treemap = new TreeMap();
-		SortedMap<String, String> headMap =  treemap.headMap("100");
+        HarmonyTreeMap = new HarmonyTreeMap<>();
+		SortedMap<String, String> headMap =  HarmonyTreeMap.headMap("100");
 		headMap.headMap("100");
 
 	SortedMap<Integer,Integer> intMap,sub;
         int size = 16;
-        intMap = new TreeMap<>();
+        intMap = new HarmonyTreeMap<>();
         for(int i=0; i<size; i++) {
             intMap.put(i,i);
         }
@@ -342,17 +328,17 @@ public class TreeMapTest extends junit.framework.TestCase {
         try{
             sub.firstKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
         
         try{
             sub.lastKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
 
         size = 256;
-        intMap = new TreeMap<>();
+        intMap = new HarmonyTreeMap<>();
         for(int i=0; i<size; i++) {
             intMap.put(i,i);
         }
@@ -362,113 +348,109 @@ public class TreeMapTest extends junit.framework.TestCase {
         try{
             sub.firstKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
         
         try{
             sub.lastKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
 
     }
 
     /**
-     * Tests java.util.TreeMap#keySet()
+     * @tests java.util.HarmonyTreeMap#keySet()
      */
     public void test_keySet() {
-        // Test for method java.util.Set java.util.TreeMap.keySet()
-        Set ks = tm.keySet();
-        assertTrue("Returned set of incorrect size",
-                ks.size() == objArray.length);
+        // Test for method java.util.Set java.util.HarmonyTreeMap.keySet()
+        Set<Object> ks = tm.keySet();
+        assertEquals("Returned set of incorrect size", ks.size(), objArray.length);
         for (int i = 0; i < tm.size(); i++) {
-            assertTrue("Returned set is missing keys", ks.contains(new Integer(
-                    i).toString()));
+            assertTrue("Returned set is missing keys", ks.contains(Integer.toString(i)));
         }
     }
 
     /**
-     * Tests java.util.TreeMap#lastKey()
+     * @tests java.util.HarmonyTreeMap#lastKey()
      */
     public void test_lastKey() {
-        // Test for method java.lang.Object java.util.TreeMap.lastKey()
-        assertTrue("Returned incorrect last key", tm.lastKey().equals(
-                objArray[objArray.length - 1].toString()));
+        // Test for method java.lang.Object java.util.HarmonyTreeMap.lastKey()
+        assertEquals("Returned incorrect last key", tm.lastKey(), objArray[objArray.length - 1].toString());
     }
 
     /**
-     * Tests java.util.TreeMap#put(java.lang.Object, java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#put(java.lang.Object, java.lang.Object)
      */
     public void test_putLjava_lang_ObjectLjava_lang_Object() {
         // Test for method java.lang.Object
-        // java.util.TreeMap.put(java.lang.Object, java.lang.Object)
+        // java.util.HarmonyTreeMap.put(java.lang.Object, java.lang.Object)
         Object o = new Object();
         tm.put("Hello", o);
-        assertTrue("Failed to put mapping", tm.get("Hello") == o);
+        assertSame("Failed to put mapping", tm.get("Hello"), o);
 
         // regression for Harmony-780
-        tm = new TreeMap();
+        tm = new HarmonyTreeMap<>();
         assertNull(tm.put(new Object(), new Object()));
         try {
-            tm.put(new Integer(1), new Object());
+            tm.put(1, new Object());
             fail("should throw ClassCastException");
         } catch (ClassCastException e) {
             // expected
         }
 
-        tm = new TreeMap();
-        assertNull(tm.put(new Integer(1), new Object()));
+        tm = new HarmonyTreeMap<>();
+        assertNull(tm.put(1, new Object()));
 
         // regression for Harmony-2474
-        tm = new TreeMap();
+        tm = new HarmonyTreeMap<>();
         tm.remove(o);
     }
 
     /**
-     * Tests java.util.TreeMap#putAll(java.util.Map)
+     * @tests java.util.HarmonyTreeMap#putAll(java.util.Map)
      */
     public void test_putAllLjava_util_Map() {
-        // Test for method void java.util.TreeMap.putAll(java.util.Map)
-        TreeMap x = new TreeMap();
+        // Test for method void java.util.HarmonyTreeMap.putAll(java.util.Map)
+        HarmonyTreeMap<Object, Object> x = new HarmonyTreeMap<>();
         x.putAll(tm);
-        assertTrue("Map incorrect size after put", x.size() == tm.size());
+        assertEquals("Map incorrect size after put", x.size(), tm.size());
         for (Object element : objArray) {
-            assertTrue("Failed to put all elements", x.get(element.toString())
-                    .equals(element));
+            assertEquals("Failed to put all elements", x.get(element.toString()), element);
         }
     }
 
     /**
-     * Tests java.util.TreeMap#remove(java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#remove(java.lang.Object)
      */
     public void test_removeLjava_lang_Object() {
         // Test for method java.lang.Object
-        // java.util.TreeMap.remove(java.lang.Object)
+        // java.util.HarmonyTreeMap.remove(java.lang.Object)
         tm.remove("990");
-        assertTrue("Failed to remove mapping", !tm.containsKey("990"));
+        assertFalse("Failed to remove mapping", tm.containsKey("990"));
 
     }
 
     /**
-     * Tests java.util.TreeMap#size()
+     * @tests java.util.HarmonyTreeMap#size()
      */
     public void test_size() {
-        // Test for method int java.util.TreeMap.size()
+        // Test for method int java.util.HarmonyTreeMap.size()
         assertEquals("Returned incorrect size", 1000, tm.size());
     }
 
     /**
-     * Tests java.util.TreeMap#subMap(java.lang.Object, java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#subMap(java.lang.Object, java.lang.Object)
      */
     public void test_subMapLjava_lang_ObjectLjava_lang_Object() {
         // Test for method java.util.SortedMap
-        // java.util.TreeMap.subMap(java.lang.Object, java.lang.Object)
-        SortedMap subMap = tm.subMap(objArray[100].toString(), objArray[109]
+        // java.util.HarmonyTreeMap.subMap(java.lang.Object, java.lang.Object)
+        SortedMap<Object, Object> subMap = tm.subMap(objArray[100].toString(), objArray[109]
                 .toString());
         assertEquals("subMap is of incorrect size", 9, subMap.size());
         for (int counter = 100; counter < 109; counter++) {
-            assertTrue("SubMap contains incorrect elements", subMap.get(
-                    objArray[counter].toString()).equals(objArray[counter]));
+            assertEquals("SubMap contains incorrect elements", subMap.get(
+                    objArray[counter].toString()), objArray[counter]);
         }
 
         try {
@@ -479,16 +461,16 @@ public class TreeMapTest extends junit.framework.TestCase {
         }
 
         // Regression for Harmony-1161
-        TreeMap<String, String> treeMapWithNull = new TreeMap<>(
+        HarmonyTreeMap<String, String> HarmonyTreeMapWithNull = new HarmonyTreeMap<>(
                 new MockComparatorNullTolerable());
-        treeMapWithNull.put("key1", "value1"); //$NON-NLS-1$ //$NON-NLS-2$
-        treeMapWithNull.put(null, "value2"); //$NON-NLS-1$
-        SortedMap<String, String> subMapWithNull = treeMapWithNull.subMap(null,
+        HarmonyTreeMapWithNull.put("key1", "value1"); //$NON-NLS-1$ //$NON-NLS-2$
+        HarmonyTreeMapWithNull.put(null, "value2"); //$NON-NLS-1$
+        SortedMap<String, String> subMapWithNull = HarmonyTreeMapWithNull.subMap(null,
                 "key1"); //$NON-NLS-1$
         assertEquals("Size of subMap should be 1:", 1, subMapWithNull.size()); //$NON-NLS-1$
 
         // Regression test for typo in lastKey method
-        SortedMap<String, String> map = new TreeMap<>();
+        SortedMap<String, String> map = new HarmonyTreeMap<>();
         map.put("1", "one"); //$NON-NLS-1$ //$NON-NLS-2$
         map.put("2", "two"); //$NON-NLS-1$ //$NON-NLS-2$
         map.put("3", "three"); //$NON-NLS-1$ //$NON-NLS-2$
@@ -499,10 +481,10 @@ public class TreeMapTest extends junit.framework.TestCase {
     
     
     /**
-     * Tests java.util.TreeMap#subMap(java.lang.Object, java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#subMap(java.lang.Object, java.lang.Object)
      */
     public void test_subMap_Iterator() {
-        TreeMap<String, String> map = new TreeMap<>();
+        HarmonyTreeMap<String, String> map = new HarmonyTreeMap<>();
 
         String[] keys = { "1", "2", "3" };
         String[] values = { "one", "two", "three" };
@@ -512,10 +494,10 @@ public class TreeMapTest extends junit.framework.TestCase {
 
         assertEquals(3, map.size());
 
-        Map subMap = map.subMap("", "test");
+        Map<String, String> subMap = map.subMap("", "test");
         assertEquals(3, subMap.size());
 
-        Set entrySet = subMap.entrySet();
+        Set<Map.Entry<String, String>> entrySet = subMap.entrySet();
         Iterator iter = entrySet.iterator();
         int size = 0;
         while (iter.hasNext()) {
@@ -540,14 +522,14 @@ public class TreeMapTest extends junit.framework.TestCase {
 
 
     /**
-     * Tests java.util.TreeMap#tailMap(java.lang.Object)
+     * @tests java.util.HarmonyTreeMap#tailMap(java.lang.Object)
      */
     public void test_tailMapLjava_lang_Object() {
         // Test for method java.util.SortedMap
-        // java.util.TreeMap.tailMap(java.lang.Object)
-        Map tail = tm.tailMap(objArray[900].toString());
-        assertTrue("Returned map of incorrect size : " + tail.size(), tail
-                .size() == (objArray.length - 900) + 9);
+        // java.util.HarmonyTreeMap.tailMap(java.lang.Object)
+        Map<Object, Object> tail = tm.tailMap(objArray[900].toString());
+        assertEquals("Returned map of incorrect size : " + tail.size(), tail
+                .size(), (objArray.length - 900) + 9);
         for (int i = 900; i < objArray.length; i++) {
             assertTrue("Map contains incorrect entries", tail
                     .containsValue(objArray[i]));
@@ -558,7 +540,7 @@ public class TreeMapTest extends junit.framework.TestCase {
 
 	SortedMap<Integer,Integer> intMap,sub;
         int size = 16;
-        intMap = new TreeMap<>();
+        intMap = new HarmonyTreeMap<>();
         for(int i=0; i<size; i++) {
             intMap.put(i,i);
         }
@@ -568,17 +550,17 @@ public class TreeMapTest extends junit.framework.TestCase {
         try{
             sub.firstKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
         
         try{
             sub.lastKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
 
         size = 256;
-        intMap = new TreeMap<>();
+        intMap = new HarmonyTreeMap<>();
         for(int i=0; i<size; i++) {
             intMap.put(i,i);
         }
@@ -588,58 +570,55 @@ public class TreeMapTest extends junit.framework.TestCase {
         try{
             sub.firstKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
         
         try{
             sub.lastKey();
             fail("java.util.NoSuchElementException should be thrown");
-        } catch(java.util.NoSuchElementException e) {
+        } catch(java.util.NoSuchElementException ignored) {
         }
 
     }
 
     /**
-     * Tests java.util.TreeMap#values()
+     * @tests java.util.HarmonyTreeMap#values()
      */
     public void test_values() {
-        // Test for method java.util.Collection java.util.TreeMap.values()
-        Collection vals = tm.values();
+        // Test for method java.util.Collection java.util.HarmonyTreeMap.values()
+        Collection<Object> vals = tm.values();
         vals.iterator();
-        assertTrue("Returned collection of incorrect size",
-                vals.size() == objArray.length);
+        assertEquals("Returned collection of incorrect size", vals.size(), objArray.length);
         for (Object element : objArray) {
             assertTrue("Collection contains incorrect elements", vals
                     .contains(element));
         }
 
-        TreeMap myTreeMap = new TreeMap();
+        HarmonyTreeMap myHarmonyTreeMap = new HarmonyTreeMap();
         for (int i = 0; i < 100; i++) {
-            myTreeMap.put(objArray[i], objArray[i]);
+            myHarmonyTreeMap.put(objArray[i], objArray[i]);
         }
-        Collection values = myTreeMap.values();
+        Collection values = myHarmonyTreeMap.values();
         new Support_UnmodifiableCollectionTest(
-                "Test Returned Collection From TreeMap.values()", values)
+                "Test Returned Collection From HarmonyTreeMap.values()", values)
                 .runTest();
-        values.remove(new Integer(0));
-        assertTrue(
-                "Removing from the values collection should remove from the original map",
-                !myTreeMap.containsValue(new Integer(0)));
+        values.remove(0);
+        assertFalse("Removing from the values collection should remove from the original map", myHarmonyTreeMap.containsValue(0));
     }
 
     /**
-     * Tests java.util.TreeMap#SerializationTest()
+     * @tests java.util.HarmonyTreeMap#SerializationTest()
      */
     // Regression for Harmony-1066
     public void test_SubMap_Serializable() throws Exception {
-        TreeMap<Integer, Double> map = new TreeMap<>();
+        HarmonyTreeMap<Integer, Double> map = new HarmonyTreeMap<>();
         map.put(1, 2.1);
         map.put(2, 3.1);
         map.put(3, 4.5);
         map.put(7, 21.3);
         SortedMap<Integer, Double> headMap = map.headMap(3);
         assertTrue(headMap instanceof Serializable);
-        assertFalse(headMap instanceof TreeMap);
+        assertFalse(headMap instanceof HarmonyTreeMap);
         assertTrue(headMap instanceof SortedMap);
 
         assertFalse(headMap.entrySet() instanceof Serializable);
@@ -655,32 +634,32 @@ public class TreeMapTest extends junit.framework.TestCase {
      * Tests that no ClassCastException will be thrown in all cases.
      * Regression test for HARMONY-1639.
      */
-    public void test_equals() throws Exception {
-        // comparing TreeMaps with different object types
-        Map m1 = new TreeMap();
-        Map m2 = new TreeMap();
+    public void test_equals() {
+        // comparing HarmonyTreeMaps with different object types
+        Map<Object, String> m1 = new HarmonyTreeMap<>();
+        Map<Object, String> m2 = new HarmonyTreeMap<>();
         m1.put("key1", "val1");
         m1.put("key2", "val2");
-        m2.put(new Integer(1), "val1");
-        m2.put(new Integer(2), "val2");
-        assertFalse("Maps should not be equal 1", m1.equals(m2));
-        assertFalse("Maps should not be equal 2", m2.equals(m1));
+        m2.put(1, "val1");
+        m2.put(2, "val2");
+        assertNotEquals("Maps should not be equal 1", m1, m2);
+        assertNotEquals("Maps should not be equal 2", m2, m1);
 
-        // comparing TreeMap with HashMap
-        m1 = new TreeMap();
-        m2 = new HashMap();
+        // comparing HarmonyTreeMap with HashMap
+        m1 = new HarmonyTreeMap<>();
+        m2 = new HashMap<>();
         m1.put("key", "val");
         m2.put(new Object(), "val");
-        assertFalse("Maps should not be equal 3", m1.equals(m2));
-        assertFalse("Maps should not be equal 4", m2.equals(m1));
+        assertNotEquals("Maps should not be equal 3", m1, m2);
+        assertNotEquals("Maps should not be equal 4", m2, m1);
 
-        // comparing TreeMaps with not-comparable objects inside
-        m1 = new TreeMap();
-        m2 = new TreeMap();
+        // comparing HarmonyTreeMaps with not-comparable objects inside
+        m1 = new HarmonyTreeMap<>();
+        m2 = new HarmonyTreeMap<>();
         m1.put(new Object(), "val1");
         m2.put(new Object(), "val1");
-        assertFalse("Maps should not be equal 5", m1.equals(m2));
-        assertFalse("Maps should not be equal 6", m2.equals(m1));
+        assertNotEquals("Maps should not be equal 5", m1, m2);
+        assertNotEquals("Maps should not be equal 6", m2, m1);
     }
 
     /**
@@ -688,9 +667,10 @@ public class TreeMapTest extends junit.framework.TestCase {
      * with null values.
      * Regression test for HARMONY-5788.
      */
-    public void test_entrySet_contains() throws Exception {
-        TreeMap master = new TreeMap<String, String>();
-        TreeMap test_map = new TreeMap<String, String>();
+    @SuppressWarnings("rawtypes") // this is important: we should be able to put both string and char-values into the map for testing.
+    public void test_entrySet_contains() {
+        HarmonyTreeMap master = new HarmonyTreeMap<String, String>();
+        HarmonyTreeMap<String, String> test_map = new HarmonyTreeMap<>();
 
         master.put("null", null);
         Object[] entry = master.entrySet().toArray();
@@ -719,9 +699,9 @@ public class TreeMapTest extends junit.framework.TestCase {
      */
     @Override
     protected void setUp() {
-        tm = new TreeMap();
+        tm = new HarmonyTreeMap<>();
         for (int i = 0; i < objArray.length; i++) {
-            Object x = objArray[i] = new Integer(i);
+            Object x = objArray[i] = i;
             tm.put(x.toString(), x);
         }
     }
